--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Poch'Lib</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="script.js">
   	</head>
   	<body>
 		<div id="myBooks">
