--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="script.js">
-  	</head>
+	</head>
   	<body>
 		<div id="myBooks">
 			<h1 class="title">Poch'Lib</h1>
@@ -16,5 +15,6 @@
 				<h2>Ma poch'liste</h2>
 			</div>
 		</div>
+		<script type="text/javascript" src="script.js"></script>
   	</body>
 </html>
