--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Poch'Lib</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="style.css">
-	</head>
-  	<body>
-		<div id="myBooks">
-			<h1 class="title">Poch'Lib</h1>
-			<h2 class="h2">Nouveau Livre</h2>
-			<hr>
-			<div id="content">
-				<h2>Ma poch'liste</h2>
-			</div>
+
+<head>
+	<title>Poch'Lib</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	<div id="myBooks">
+		<h1 class="title">Poch'Lib</h1>
+		<h2 class="h2">Nouveau Livre</h2>
+		<hr>
+		<div id="content">
+			<h2>Ma poch'liste</h2>
 		</div>
-		<script type="text/javascript" src="script.js"></script>
-  	</body>
+	</div>
+	<script type="text/javascript" src="script.js"></script>
+</body>
+
 </html>
