--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
+	<script src="https://www.googleapis.com/books/v1/volumes?q=harry+potter&callback=handleResponse"></script>
 </body>
 
 </html>
